fixed header issues,added wrap for sticky footer and colored in nav svgs

--- a/css/main.sass
+++ b/css/main.sass
@@ -10,19 +10,36 @@ body, html
 
 
 
+
   //index header
 header
   background-color: rgba(34, 34, 34, 0.94)
   color: rgba(221, 221, 221, 1)
-  height: 16%
+  height: 20%
+  position: relative
+  z-index: 1001
 
 
+
+#anythings
+  padding-right: 0.1em
+  font-weight: 100
+
+#possible
+  padding-left: 0.1em
+  font-weight: 100
 .title
   margin: -10px 0 0 0
   font-family: 'Roboto', sans-serif
+
 .title h1
   display: inline-block
+  font-family: 'Great Vibes'
+  margin-top: -1em
 
+.title h4
+  margin-top: -1em
+  font-family: 'Roboto Slab' , sans-serif
 
 
 
@@ -33,17 +50,17 @@ header
 //*********************Navigation
 .mobile-nav
   position: absolute
-  top: 0.7em
-  left: 0.5em
+  top: 2em
+  left: 1em
 
 .main-color
-  fill: rgba(166, 166, 166, 0.4)
+  fill: rgba(166, 166, 166, 0.6)
 .main-color1
   fill: rgba(255, 255, 255, 1)
 
 #menulist
   position: fixed
-  top: 14%
+  top: 16%
   z-index: 1000
   width: 100%
   height: 18em
@@ -97,6 +114,7 @@ header
     //slideshow
 
 
+
 @keyframes fade
   0%
     left: 0%
@@ -142,3 +160,19 @@ div#slider
   margin-right: auto
   height: auto
   width: 100%
+
+
+
+//*****************FOOTER*****************
+// #wrap created for sticky footer
+
+
+#wrap
+  min-height: calc(100vh - 20px)
+  margin: 0
+  padding: 0
+
+footer
+  background-color: rgba(34, 34, 34, 0.94)
+  color: rgba(221, 221, 221, 1)
+  height: 20px
